# adventofcode

./: .gitignore  README.md
2021/: Nine.scala  One.java  README.md  eight.cr  eleven.jl  fifteen.d  five.kt  four.r  fourteen.php  seven.go  seventeen.c  six.sml  sixteen.ml  ten.rb  thirteen.awk  three.clj  twelve.py  two.hs
2022/: README.md
2022/eight/: Dockerfile  eight.R
2022/eleven/: Dockerfile  eleven.pl
2022/fifteen/: Dockerfile  fifteen.scala
2022/five/: Dockerfile  five.erl
2022/four/: Dockerfile  four.php
2022/fourteen/: Dockerfile  fourteen.vala
2022/nine/: Dockerfile  nine.nim
2022/one/: Dockerfile  one.kt
2022/seven/: Dockerfile  seven.jl
2022/six/: Dockerfile  Six.cpp
2022/ten/: Dockerfile  ten.hs
2022/thirteen/: Dockerfile  thirteen.py
2022/three/: Dockerfile  three.rktl
2022/twelve/: Dockerfile  twelve.d
2022/two/: Cargo.toml  Dockerfile
2023/: README.md  run.sh
2023/1/: one.clj
2023/10/: Ten.hx
2023/11/: Dockerfile
2023/12/: Dockerfile  twelve.js
2023/13/: Dockerfile  thirteen.d
2023/14/: Dockerfile  fourteen.R
2023/15/: Dockerfile  fifteen.cabal
2023/15/fifteen/: Fifteen.hs
2023/16/: Dockerfile  sixteen.jl
2023/18/: Dockerfile  eighteen.rb
2023/19/: Dockerfile  nineteen.go
2023/21/: Dockerfile  TwentyOne.cpp
2023/3/: Dockerfile
2023/4/: Dockerfile  four.erl
2023/6/: Dockerfile  six.ml
2023/7/: Dockerfile  seven.groovy
2023/9/: Dockerfile
2024/: README.md
2024/17/: Dockerfile  seventeen.cabal
2024/17/seventeen/: Seventeen.hs
2025/: README.md
2025/3/: Dockerfile  dune-project
(+59 files in other folders)
