cabal-version:      3.0
name:               fifteen 
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable app
    import:           warnings
    main-is:          Fifteen.hs
    -- other-modules:    
    -- other-extensions:
    build-depends:    base ^>=4.18.1.0,split,containers
    hs-source-dirs:   fifteen 
    default-language: Haskell2010
