cabal-version:      3.12
name:               seventeen
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable app
    import:           warnings
    main-is:          Seventeen.hs
    -- other-modules:    
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0,split
    hs-source-dirs:   seventeen
    default-language: Haskell2010
